# inconference

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  build.sh  inconference.cfg
devcontainer/: Dockerfile
src/: BasicHttpd.cpp  BasicHttpd.h  CMakeCache.txt  CMakeLists.txt  Endpoint.cpp  Endpoint.h  GenericServer.cpp  GenericServer.h  Makefile  Mediator.cpp  Mediator.h  SharedBuffer.cpp  SharedBuffer.h  SystemIO.cpp  SystemIO.h  library.h  utils.cpp  utils.h
test/: BasicHttpd.cpp  CMakeLists.txt  FDSelectorTests.cpp  GenericServerTests.cpp  Makefile  MediatorTestHelper.h  MediatorTests.cpp  SharedBufferTests.cpp  utilsTests.cpp
